09 - Services/deployment-svc-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: svc-example
  name: svc-example
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: svc-example
  strategy: {}
  template:
    metadata:
      labels:
        app: svc-example
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
          - containerPort: 80
status: {}
