09 - Services/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test-pod
  name: test-pod
  namespace: dev
spec:
  containers:
  - name: test-pod
    image: busybox
    command:
      - /bin/sh
      - -c
      - while true; do sleep 10; done
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
