09 - Services/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc-nodeport
  name: svc-nodeport
  namespace: dev
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: svc-nodeport
  type: NodePort
