09 - Services/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: dev
spec:
  rules:
  - host: local
    http:
      paths:
      - backend:
          service:
            name: my-service
            port:
              number: 8080 # We can even put port name
        path: /api/v1
        pathType: Exact
status:
  loadBalancer: {}
